# the-flask-test

./: .dockerignore  .flake8  .gitignore  Dockerfile  Makefile  Procfile  README.md  docker-compose.yml  example.env  gunicorn_config.py  package.json  pyproject.toml  requirements.txt  wsgi.py
frontend/: .dockerignore  Dockerfile  example.env  package.json
frontend/src/: App.js  index.js
frontend/src/assets/: App.css
frontend/src/components/FormInput/: index.js
frontend/src/components/FormSelect/: index.js
frontend/src/components/Header/: index.js
frontend/src/components/StudentDetails/: index.js
frontend/src/components/StudentModal/: index.js
frontend/src/containers/StudentDetails/: index.js
frontend/src/containers/StudentModal/: index.js
frontend/src/redux/: configureStore.js
frontend/src/redux/actions/: APIActions.js  ActionTypes.js  ModalActions.js
frontend/src/redux/reducers/: modal.js  reducer.js  student.js
migrations/versions/: 1a0f4fabbb21_.py  9d65b8e4f8bd_.py  a3d26af26cd5_.py
src/: app.py  config.py  exception.py  extensions.py
src/models/: __init__.py  student.py
src/routes/: student_router.py
src/services/: student_service.py
tests/: test_the_flask_test.py
the_flask_test/: __init__.py  app.py  config.py  extensions.py
the_flask_test/models/: __init__.py  student.py
the_flask_test/routes/: student_router.py
the_flask_test/services/: student_service.py
